Details
-
Bug
-
Resolution: Done
-
P1: Critical
-
4.7.0
-
None
-
S60 5.0 SDK, nokia 5800 express music.
-
aa04c975442aace80d95f9f70ab11fa845436c54
Description
update: crash can be reproduced both on hardware and emulator
4.7 introduces Beareremanagement where I think this issue comes from.
To reproduce start anomaly, select IAP when asked and you'll get kern-exec 3 as key passed to to hash is 0. Problem seems to be in QNetworkConfigurationManager::configurationFromIdentifier() IAP entry is not there ?
call-stack:
1: 28 QString::size() C:\repos\qt\src\corelib\tools\qstring.h:115 0x0444e544
2: 27 qHash() C:\repos\qt\src\corelib\tools\qhash.cpp:95 0x045805fb
3: 26 QHash<QString, QExplicitlySharedDataPointer<QNetworkConfigurationPrivate>>::findNode() C:\repos\qt\src\corelib\tools\qhash.h:879 0x08634ae4
4: 25 QHash<QString, QExplicitlySharedDataPointer<QNetworkConfigurationPrivate>>::contains() C:\repos\qt\src\corelib\tools\qhash.h:871 0x0863251f
5: 24 QNetworkConfigurationManagerPrivate::configurationFromIdentifier() C:\repos\qt\src\network\bearer\qnetworkconfigmanager_p.cpp:246 0x08632271
6: 23 QNetworkConfigurationManager::configurationFromIdentifier() C:\repos\qt\src\network\bearer\qnetworkconfigmanager.cpp:258 0x0862efa3
7: 22 QNetworkSessionPrivateImpl::RunL() C:\repos\qt\src\plugins\bearer\symbian\qnetworksession_impl.cpp:891 0x473ecd13
8: 21 0x60002336( euser.dll )() 0x60002336
9: 20 QEventDispatcherSymbian::processEvents() C:\repos\qt\src\corelib\kernel\qeventdispatcher_symbian.cpp:736 0x0452cb78
10: 19 QEventDispatcherS60::processEvents() C:\repos\qt\src\gui\kernel\qeventdispatcher_s60.cpp:74 0x04ca4f55
11: 18 QEventLoop::processEvents() C:\repos\qt\src\corelib\kernel\qeventloop.cpp:149 0x044f37c0
12: 17 QEventLoop::exec() C:\repos\qt\src\corelib\kernel\qeventloop.cpp:201 0x044f39b9
13: 16 SymbianEngine::waitRandomTime() C:\repos\qt\src\plugins\bearer\symbian\symbianengine.cpp:1065 0x473e6ee3
14: 15 SymbianEngine::RunL() C:\repos\qt\src\plugins\bearer\symbian\symbianengine.cpp:923 0x473e6385
15: 14 0x60002336( euser.dll )() 0x60002336
16: 13 QEventDispatcherSymbian::processEvents() C:\repos\qt\src\corelib\kernel\qeventdispatcher_symbian.cpp:736 0x0452cb78
17: 12 QEventDispatcherS60::processEvents() C:\repos\qt\src\gui\kernel\qeventdispatcher_s60.cpp:74 0x04ca4f55
18: 11 QEventLoop::processEvents() C:\repos\qt\src\corelib\kernel\qeventloop.cpp:149 0x044f37c0
19: 10 QEventLoop::exec() C:\repos\qt\src\corelib\kernel\qeventloop.cpp:201 0x044f39b9
20: 9 QCoreApplication::exec() C:\repos\qt\src\corelib\kernel\qcoreapplication.cpp:981 0x044f6a53
21: 8 QApplication::exec() C:\repos\qt\src\gui\kernel\qapplication.cpp:3620 0x04c2cbc9
22: 7 main() C:\webviewclient\main.cpp:55 0x00401170
23: 6 QtMainWrapper() C:\repos\qt\src\s60main\qts60main_mcrt0.cpp:86 0x00403511
24: 5 E32Main() C:\repos\qt\src\s60main\qts60main.cpp:56 0x0040333c
25: 4 _E32Startup() L:\src\cedar\generic\base\e32\euser\epoc\win32\uc_exe.cpp:83 0x00402a08
26: 3 0x90B947F( ekern.exe )() 0x090b947f
27: 2 0x90B7987( ekern.exe )() 0x090b7987
28: 1 0x7C80B50B( KERNEL32.dll )() 0x7c80b50b