fix webkit crash when accessing network on Symbian

Fixes crash on startup and crashes on network requests

Task-number: QTBUG-9820
Reviewed-by: Janne Anttila